@@ -138,6 +138,8 @@ if(!($('#vboxSettingsDialog').data('vboxMachineData').VRDEServer && $('#vboxSett
 } else {
 	
 	document.forms['frmVboxSettings'].vboxSettingsDisplayRDPPort.value = $('#vboxSettingsDialog').data('vboxMachineData').VRDEServer.ports;
+	if(!document.forms['frmVboxSettings'].vboxSettingsDisplayRDPPort.value)
+		document.forms['frmVboxSettings'].vboxSettingsDisplayRDPPort.value = '3389';
 	document.forms['frmVboxSettings'].vboxSettingsDisplayRDPAuth.value = $('#vboxSettingsDialog').data('vboxMachineData').VRDEServer.authType;
 	document.forms['frmVboxSettings'].vboxSettingsDisplayRDPAuthTimeout.value = $('#vboxSettingsDialog').data('vboxMachineData').VRDEServer.authTimeout;
 	
